feat(tests): enhance FavoriteServiceTest with additional test cases and refactor assertions